updates colors to blue

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         position: absolute;
         top: 5px;
         left: 5px;
-        background-color: lightgray;
-        border: 2px solid black;
+        background-color: lightcyan;
+        border: 2px solid navy;
         border-radius: 5%;
         height: 100%;
         width: 100%;
